<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OSRS Helper</string>
    <string name="app_powered_by">Powered by Wise Old Man</string>
    <string name="highscores">Hiscores</string>
    <string name="world_map">World Map</string>
    <string name="profile">Profile</string>
    <string name="wiki">Wiki</string>
    <string name="xptracker">XP Tracker</string>
    <string name="grand_exchange">Grand Exchange</string>
    <string name="top_players">Top Players</string>
    <string name="donate_group">Donation</string>
    <string name="donate_1">1$ Donation</string>
    <string name="donate_3">3$ Donation</string>
    <string name="donate_10">10$ Donation</string>
    <string name="username_desc">Enter a new username</string>
    <string name="username_widget">Widget configuration</string>
    <string name="username_profile">Profile configuration</string>
    <string name="username_tutorial_runelite_title">RuneLite Tutorial</string>
    <string name="username_tutorial_runelite_description">If you are using the RuneLite client, you can automatically update your Wise Old Man tracking when you log out. This will also import the existing data from Crystal Math Labs. Here\'s how to do it.</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_search">Search an item...</string>
    <string name="continuee">Continue</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="username_error">You need to specify a username</string>
    <string name="username_choose">Or choose from the previously entered ones</string>
    <string name="delete">Delete</string>
    <string name="delete_username">Do you want to delete this username?</string>
    <string name="skill">Skill</string>
    <string name="xp">XP</string>
    <string name="xp_to_lvl">XP To Level</string>
    <string name="level">Level</string>
    <string name="ranking">Ranking</string>
    <string name="load">Load</string>
    <string name="loading">Loading</string>
    <string name="loading_ge_details">Loading %1$s</string>
    <string name="combat_lvl_for_share">Combat lvl: %1$d</string>
    <string name="combat_lvl">(level-%1$d)</string>
    <string name="not_existing_player">Player not found</string>
    <string name="not_tracked_player">Account is not tracked yet. Press update to track them from now on.</string>
    <string name="showing_results">Showing hiscores for: %1$s</string>
    <string name="internal_error">Network error</string>
    <string name="not_ranked">Not ranked</string>
    <string name="runescape_view">Runescape View</string>
    <string name="list_view">List View</string>
    <string name="xp_gain">(XPΔ)</string>
    <string name="rank_diff">(RankΔ)</string>
    <string name="gain">%1$dK</string>
    <string name="gain_small">%1$s</string>
    <string name="gain_medium">%1$.1fK</string>
    <string name="tracking_since">Tracking since</string>
    <string name="last_update">Last track</string>
    <string name="now_tracking">Player not found, please press the update icon</string>
    <string name="virtual_levels">Virtual Levels</string>
    <string name="update">Update</string>
    <string name="updating">Updating</string>
    <string name="updating_failed">Failed to update player</string>
    <string name="widget_username_name">Hiscores</string>
    <string name="widget_grand_exchange_name">Grand Exchange Price</string>
    <string name="next_page">Next Page</string>
    <string name="back_page">Back Page</string>

    <string name="top_select_skill_title">@string/top_players</string>
    <string name="top_select_skill_desc">Choose a skill to see its current top players</string>

    <string name="grand_exchange_search_title">Grand Exchange</string>
    <string name="grand_exchange_search_desc">Search for your item to see its details</string>

    <string-array name="time_array">
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="search">Search</string>
    <string name="title_activity_world_map">World Map</string>
    <string name="hitpoints_lvl">Hitpoints</string>
    <string name="attack_lvl">Attack</string>
    <string name="strength_lvl">Strength</string>
    <string name="defence_lvl">Defence</string>
    <string name="magic_lvl">Magic</string>
    <string name="ranging_lvl">Ranging</string>
    <string name="prayer_lvl">Prayer</string>

    <string name="lvl_need">To reach level %1$d, you need either:</string>
    <string name="maxed_out">You are currently maxed out</string>
    <string name="attack_strength_lvl_needed">Attack/Strength levels: %1$d</string>
    <string name="hitpoint_defence_lvl_needed">Hitpoint/Defence levels: %1$d</string>
    <string name="ranging_lvl_needed">Ranged levels: %1$d</string>
    <string name="magic_lvl_needed">Magic levels: %1$d</string>
    <string name="prayer_lvl_needed">Prayer levels: %1$d</string>
    <string name="subscribe_news">Subscribe to News</string>
    <string name="unsubscribe_news">Unsubscribe to News</string>
    <string name="show_virtual_levels">Show virtual levels</string>
    <string name="hide_virtual_levels">Hide virtual levels</string>
    <string name="tap_to_dismiss">Tap to dismiss</string>
    <string name="share_hiscores">Share</string>
    <string name="combat_lvl_calc">Next Combat level</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="switch_profile">Switch Profile</string>
    <string name="tools">Tools</string>
    <string name="news">News</string>
    <string name="bubble">Bubble</string>
    <string name="lookup_user">Lookup user</string>
    <string name="no_profile">No profile selected yet</string>
    <string name="first_time_news_feed">Since you are new here, click here to enter your account name to set as your profile</string>
    <string name="data_points">Data points</string>
    <string name="home">Home</string>
    <string name="failed_load_osrs_news">Failed to load the news</string>
    <string name="grand_exchange_lookup_hint">Lookup item</string>
    <string name="set_as_my_profile">Set as my profile</string>
    <string name="account_type_ironman">Ironman</string>
    <string name="account_type_ult_ironman">Ultimate Ironman</string>
    <string name="account_type_hc_ironman">Hardcore Ironman</string>
    <string name="account_type_regular">Regular</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="set_profile_title">Profile</string>
    <string name="set_profile_desc">Are you sure you want to select this user as your profile?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="three_months">3 Months</string>
    <string name="six_months">6 Months</string>
    <string name="all">All</string>
    <string name="donate">Donate</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="top_header_1">Rank</string>
    <string name="top_header_2">Username</string>
    <string name="top_header_3">Experience</string>
    <string name="top_players_for">Top players for %1$s</string>
    <string name="ge_item_current_price">Current price</string>
    <string name="ge_item_today_change">Today\'s Change</string>
    <string name="ge_item_one_month_change">1 Month Change</string>
    <string name="ge_item_three_month_change">3 Month Change</string>
    <string name="ge_item_six_month_change">6 Month Change</string>
    <string name="daily_average">Daily Average</string>
    <string name="trend">Trend</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="error">Error</string>
    <string name="ehp">EHP</string>
    <string name="not_available">N/A</string>

    <string name="skill_diff_xp">XP:</string>
    <string name="skill_diff_rank">Rank:</string>
    <string name="skill_diff_value">Value:</string>
    <string name="profile_recent_gains">Gains tracked in the last month</string>
    <string name="profile_recent_gains_empty">No gains tracked in the last month</string>
    <string name="profile_delta_on">%1$s &#x2192; %2$s</string>
    <string name="error_when_sharing">Error when sharing stats</string>
    <string name="error_when_fetching">Error when fetching</string>
    <string name="xp_tracker_error_period">Error when retrieving tracking information</string>
    <string name="xp_tracker_no_gain_period">No gain for this period</string>
    <string name="unavailable_right_now">Unavailable right now</string>
    <string name="unknown_account">Unknown</string>
    <string name="hiscore_share_intent_name">My OSRS Stats</string>

    <string name="hiscore_title">Hiscore</string>
    <string name="hiscore_cached">Cache from: %1$s</string>
    <string name="hiscore_fetch">Fetched on: %1$s</string>
    <string name="hiscore_title_skills">Skills</string>
    <string name="hiscore_title_bounty_hunter">Bounty Hunter</string>
    <string name="hiscore_title_clue_scrolls">Clue Scrolls</string>
    <string name="hiscore_title_bosses">Bosses</string>
    <string name="hiscore_title_efficiency">Efficiency</string>
    <string name="hiscore_title_lms">Last Man Standing</string>
    <string name="hiscore_title_league_points">League Points</string>
    <string name="hiscore_newly_tracked">Wise Old Man will now track that player\'s progress</string>

    <string name="hiscore_experience">XP: %1$s</string>
    <string name="hiscore_score">Score</string>
    <string name="hiscore_rank">Rank</string>
    <string name="hiscore_rank_item">th</string>

    <string name="notification_enable_system">Notifications needs to be enabled through system settings</string>
    <string name="notification_enable_system_action">Settings</string>

    <string name="shortcut_hiscore_short_label">Hiscore</string>
    <string name="shortcut_hiscore_long_label">Check the hiscores</string>

</resources>