<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/colorPrimaryDark">
    <TextView
        android:id="@+id/number_lvl_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:textStyle="bold"
        android:text="@string/lvl_need"
        android:textColor="@color/text_normal"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/attack_strength_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/attack_strength_lvl_needed"
        android:textColor="@color/text_normal" />

    <TextView
        android:id="@+id/hitpoint_defence_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/hitpoint_defence_lvl_needed"
        android:textColor="@color/text_normal" />

    <TextView
        android:id="@+id/ranging_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/ranging_lvl_needed"
        android:textColor="@color/text_normal" />

    <TextView
        android:id="@+id/magic_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/magic_lvl_needed"
        android:textColor="@color/text_normal" />

    <TextView
        android:id="@+id/prayer_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/prayer_lvl_needed"
        android:textColor="@color/text_normal" />
</LinearLayout>