<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/table_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text_normal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/skill"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text_normal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/xp_gain"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text_normal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/rank_diff"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text_normal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/ehp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/table_headers"
        android:overScrollMode="never" >

        <TableLayout
            android:id="@+id/table_tracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:stretchColumns="*">

        </TableLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_when_fetching"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>