<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/cml_table_item_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/agility"/>

        <TextView
            android:id="@+id/cml_table_item_lvl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text_normal"
            android:text="@string/skill"/>

    </LinearLayout>

    <TextView
        android:id="@+id/cml_table_item_xp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/text_normal"
        android:text="@string/xp"/>

    <TextView
        android:id="@+id/cml_table_item_diff_xp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/text_normal"
        android:text="@string/xp_gain" />

    <TextView
        android:id="@+id/cml_table_item_diff_rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/text_normal"
        android:text="@string/rank_diff"/>
</TableRow>