<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/colorAccent"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/newUsernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/username_widget"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_normal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/username_desc"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_normal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editbox"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:maxLength="12"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/text_normal"
            android:textCursorDrawable="@drawable/cursor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/runelite_tutorial_btn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/bt_sel"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="10dp"
                android:text="@string/username_tutorial_runelite_title"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/continue_btn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/bt_sel"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="10dp"
                android:text="@string/continuee"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/chooseUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newUsernameLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/username_choose"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_normal"
        android:textStyle="bold" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/chooseUsername"
        android:background="@color/gray" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line" />

</RelativeLayout>