<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/item_member"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/member"
            android:visibility="gone"
            android:layout_alignBottom="@id/item_image"
            android:layout_alignRight="@id/item_image"/>

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_image"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:text="@string/loading_ge_details"/>

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="A powerful axe."
            android:layout_below="@id/item_name"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/item_image" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ge_item_current_price"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            tools:text="2.0M"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ge_item_today_change"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_today_change_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            tools:text="-9,203"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ge_item_one_month_change"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_one_month_price_variation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            tools:text="-8%"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ge_item_three_month_change"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_three_month_price_variation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            tools:text="-8%"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ge_item_six_month_change"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_six_month_price_variation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            tools:text="-8%"/>
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/sliding_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white" />

</LinearLayout>