<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hiscore_title"
                android:textColor="@color/text_normal"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/username_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editbox"
                    android:hint="@string/prompt_username"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:layout_weight="1"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:imeOptions="actionSearch"
                    android:textColor="@color/text_normal"
                    android:textCursorDrawable="@drawable/cursor" />

                <TextView
                    android:id="@+id/continue_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bt_sel"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/continuee"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <com.infonuascape.osrshelper.views.RSView
                android:id="@+id/rs_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hiscore_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_semi_transparent"
        android:gravity="center"
        android:text="@string/error_when_fetching"
        android:textColor="@color/white"
        android:visibility="gone" />

</RelativeLayout>